versions bump: Scala 3.9.0, sbt 2.0.8, and more